# sol

./: .editorconfig  .lintstagedrc.js  Cargo.toml  README.md  package.json  rust-toolchain.toml
.husky/: clippy
docs/: package.json
docs/src/lib/: Code.svelte
docs/src/routes/: +page.svelte
editors/vscode/: package.json
editors/vscode/src/: extension.ts
sol-ariadne/: Cargo.toml
sol-ariadne/src/: lib.rs
sol-cli/: Cargo.toml
sol-cli/src/: build.rs  main.rs
sol-diagnostic/: Cargo.toml
sol-diagnostic/src/: lib.rs
sol-docs-backend/: Cargo.toml
sol-driver/: Cargo.toml
sol-driver/src/: lib.rs  rename.rs  suite.rs
sol-driver/suite/: church_encoding.expect  church_encoding.sol
sol-driver/suite/church_encoding/: church_encoding.expect  church_encoding.sol  leibniz_equality.expect  leibniz_equality.sol
sol-driver/tests/: mod.rs  utils.rs
sol-eval/: Cargo.toml
sol-eval/src/: domain.rs  lib.rs  stack.rs
sol-eyre/: Cargo.toml
sol-eyre/src/: lib.rs
sol-hir/: Cargo.toml
sol-hir-lowering/: Cargo.toml
sol-hir-lowering/src/: lib.rs  literal.rs  pattern.rs  stmt.rs  term.rs
sol-hir/src/: completions.rs  debruijin.rs  errors.rs  fmt.rs  lib.rs  lowering.rs  package.rs  primitives.rs  reference.rs  scope.rs  solver.rs  source.rs  walking.rs
sol-hir/src/source/: declaration.rs  expr.rs  literal.rs  pattern.rs  stmt.rs  top_level.rs  type_rep.rs
sol-ide/: Cargo.toml
sol-ide/src/: backend.rs  completion.rs  functions.rs  highlighter.rs  main.rs  workspace.rs
sol-js/: Cargo.toml
sol-js/src/: lib.rs
sol-syntax/: Cargo.toml  build.rs
sol-syntax/src/: error_handling.rs  lib.rs
sol-thir/: Cargo.toml
sol-thir-lowering/: Cargo.toml
sol-thir-lowering/src/: check.rs  elaboration.rs  infer.rs  lib.rs
sol-thir/src/: debruijin.rs  desugar.rs  lib.rs  shared.rs  source.rs  unification.rs  value.rs
sol-tt/: Cargo.toml
sol-tt/src/: lib.rs
sol-typer/: Cargo.toml
sol-typer/src/: declaration.rs  elaboration.rs  lib.rs  table.rs  thir.rs  type_rep.rs  utils.rs  whnf.rs
sol-vfs/: Cargo.toml
sol-vfs/src/: lib.rs
tree-sitter-sol/: Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter-sol.wasm
tree-sitter-sol/bindings/node/: binding.cc  index.js
tree-sitter-sol/bindings/rust/: build.rs  lib.rs
tree-sitter-sol/examples/: Main.sol
tree-sitter-sol/src/: grammar.json  node-types.json  parser.c
