[workspace]
resolver = "2"
members = [
    "sol-syntax",
    "sol-hir",
    "sol-hir-lowering",
    "sol-driver",
    "sol-diagnostic",
    "sol-vfs",
    "sol-ide",
    "sol-eval",
    "sol-tt",
    "sol-eyre",
    "sol-cli",
    "sol-typer",
    "sol-ariadne",
    "sol-docs-backend",
    "sol-js",
    "tree-sitter-sol",
]

[workspace.dependencies]
dashmap = "5.1.0"
fxhash = "0.2.1"
if_chain = "1.0.2"
im = "15.1.0"
im-rc = "15.0.0"
itertools = "0.11.0"
log = "0.4.14"
thiserror = "1.0.40"

salsa-2022 = { git = "https://github.com/aripiprazole/salsa.git" }

eyre = "0.6.8"
miette = "5.10.0"
paste = "1.0.14"

tree-sitter = "~0.20.10"
type-sitter-lib = { git = "https://github.com/Jakobeha/type-sitter.git" }
type-sitter-gen = { git = "https://github.com/Jakobeha/type-sitter.git" }

[workspace.package]
edition = "2021"
authors = ["Gabrielle Guimarães de Oliveira"]
description = "Resilient compiler for the Sol programming language"
documentation = "https://github.com/aripiprazole/sol"
version = "0.0.1"
