[package]
name = "sol-ariadne"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
sol-diagnostic.workspace = true
sol-syntax.workspace = true
sol-vfs.workspace = true
sol-eyre.workspace = true
salsa-2022.workspace = true
tree-sitter.workspace = true
type-sitter-lib.workspace = true
dashmap.workspace = true
itertools.workspace = true
fxhash.workspace = true
ariadne.workspace = true
