[package]
name = "sol-cli"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[[bin]]
name = "sol"
path = "src/main.rs"

[dependencies]
sol-diagnostic.workspace = true
sol-hir.workspace = true
sol-hir-lowering.workspace = true
sol-syntax.workspace = true
sol-vfs.workspace = true
sol-js.workspace = true
sol-ariadne.workspace = true
sol-driver.workspace = true
sol-eyre.workspace = true
salsa-2022.workspace = true
tree-sitter.workspace = true
tree-sitter-sol.workspace = true
type-sitter-lib.workspace = true
dashmap.workspace = true
im.workspace = true
fxhash.workspace = true
itertools.workspace = true
log.workspace = true
toml.workspace = true
colored.workspace = true
ariadne.workspace = true
env_logger.workspace = true
ropey.workspace = true
serde.workspace = true
clap.workspace = true
