[package]
name = "sol-diagnostic"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
sol-eyre.workspace = true
salsa-2022.workspace = true
tree-sitter.workspace = true
type-sitter-lib.workspace = true
paste.workspace = true
serde.workspace = true
miette.workspace = true
