[package]
name = "sol-driver"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
sol-diagnostic = { version = "0.0.1", path = "../sol-diagnostic" }
sol-hir = { version = "0.0.1", path = "../sol-hir" }
sol-hir-lowering = { version = "0.0.1", path = "../sol-hir-lowering" }
sol-syntax = { version = "0.0.1", path = "../sol-syntax" }
sol-vfs = { version = "0.0.1", path = "../sol-vfs" }
sol-typer = { version = "0.0.1", path = "../sol-typer" }
sol-ariadne = { version = "0.0.1", path = "../sol-ariadne" }
sol-eval = { version = "0.0.1", path = "../sol-eval" }
sol-tt = { version = "0.0.1", path = "../sol-tt" }
sol-eyre = { version = "0.0.1", path = "../sol-eyre" }

salsa-2022 = { workspace = true }

dashmap.workspace = true
itertools.workspace = true
fxhash.workspace = true

ariadne = { version = "0.3.0", features = ["auto-color"] }
similar = "2.2.1"
strip-ansi-escapes = "0.2.0"
env_logger = "0.10.0"
log.workspace = true
