[package]
name = "sol-driver"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
sol-diagnostic.workspace = true
sol-hir.workspace = true
sol-hir-lowering.workspace = true
sol-syntax.workspace = true
sol-vfs.workspace = true
sol-typer.workspace = true
sol-ariadne.workspace = true
sol-thir.workspace = true
sol-thir-lowering.workspace = true
sol-eyre.workspace = true
salsa-2022.workspace = true
dashmap.workspace = true
itertools.workspace = true
fxhash.workspace = true
ariadne.workspace = true
similar.workspace = true
strip-ansi-escapes.workspace = true
env_logger.workspace = true
log.workspace = true
