[package]
name = "sol-eval"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
sol-diagnostic.workspace = true
sol-hir.workspace = true
sol-syntax.workspace = true
sol-vfs.workspace = true
sol-tt.workspace = true
salsa-2022.workspace = true
im.workspace = true
