[package]
name = "sol-hir-lowering"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
sol-diagnostic.workspace = true
sol-hir.workspace = true
sol-syntax.workspace = true
sol-vfs.workspace = true
salsa-2022.workspace = true
eyre.workspace = true
im.workspace = true
fxhash.workspace = true
dashmap.workspace = true
tree-sitter.workspace = true
type-sitter-lib.workspace = true
