[package]
name = "sol-hir"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
sol-diagnostic = {version = "0.0.1", path = "../sol-diagnostic"}
sol-syntax = {version = "0.0.1", path = "../sol-syntax"}

salsa-2022.workspace = true

eyre.workspace = true
im.workspace = true
fxhash.workspace = true
dashmap.workspace = true

if_chain = "1.0.2"
petgraph = "0.6.3"
once_cell = "1.18.0"
thiserror.workspace = true
