[package]
name = "sol-hir"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
sol-diagnostic.workspace = true
sol-syntax.workspace = true
salsa-2022.workspace = true
eyre.workspace = true
im.workspace = true
fxhash.workspace = true
dashmap.workspace = true
if_chain.workspace = true
petgraph.workspace = true
once_cell.workspace = true
thiserror.workspace = true
