[package]
name = "sol-ide"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[[bin]]
name = "sol-language-server"
path = "src/main.rs"

[dependencies]
sol-diagnostic.workspace = true
sol-hir.workspace = true
sol-hir-lowering.workspace = true
sol-syntax.workspace = true
sol-vfs.workspace = true
sol-driver.workspace = true
salsa-2022.workspace = true
tree-sitter.workspace = true
type-sitter-lib.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-sol.workspace = true
dashmap.workspace = true
eyre.workspace = true
im.workspace = true
fxhash.workspace = true
itertools.workspace = true
log.workspace = true
crossbeam-channel.workspace = true
notify-debouncer-mini.workspace = true
async-trait.workspace = true
colored.workspace = true
env_logger.workspace = true
ropey.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
