[package]
name = "sol-syntax"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
sol-diagnostic.workspace = true
sol-vfs.workspace = true
salsa-2022.workspace = true
tree-sitter.workspace = true
tree-sitter-sol.workspace = true
type-sitter-lib.workspace = true

[build-dependencies]
type-sitter-gen.workspace = true
rust-format.workspace = true
