[package]
name = "sol-typer"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
sol-diagnostic.workspace = true
sol-hir.workspace = true
sol-thir.workspace = true
salsa-2022.workspace = true
tree-sitter.workspace = true
type-sitter-lib.workspace = true
eyre.workspace = true
im.workspace = true
im-rc.workspace = true
fxhash.workspace = true
dashmap.workspace = true
if_chain.workspace = true
petgraph.workspace = true
log.workspace = true
